<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.Guideline
        android:id="@+id/guideline12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".5" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="@dimen/header_height" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="@dimen/footer_height" />

    <TextView
        android:id="@+id/objectFailureHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/stocker"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/header_font_size"
        app:layout_constraintBottom_toTopOf="@+id/guideline13"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/objectFailureMsg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/product_failure_msg"
        android:textSize="@dimen/msg_font_size"
        app:layout_constraintBottom_toTopOf="@+id/ObjectFailureHomeBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guideline13" />

    <Button
        android:id="@+id/ObjectFailureHomeBtn"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:background="@color/colorAccent"
        android:onClick="onHomeClick"
        android:text="@string/home"
        android:textColor="@color/White"
        android:textSize="@dimen/button_font_size"
        app:layout_constraintBottom_toTopOf="@+id/guideline14"
        app:layout_constraintEnd_toStartOf="@+id/objectFailureAddBtn"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/objectFailureMsg" />

    <Button
        android:id="@+id/objectFailureAddBtn"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:background="@color/colorAccent"
        android:onClick="onNewObjectClick"
        android:text="@string/product_more"
        android:textColor="@color/White"
        android:textSize="@dimen/button_font_size"
        app:layout_constraintBottom_toBottomOf="@+id/ObjectFailureHomeBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/ObjectFailureHomeBtn"
        app:layout_constraintTop_toTopOf="@+id/ObjectFailureHomeBtn"
        app:layout_constraintVertical_bias="0.0" />
</android.support.constraint.ConstraintLayout>